## $Id
AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libprofinet_dissect_dissectors.a

libprofinet_dissect_dissectors_a_SOURCES = \
PacketDissector.c PacketDissector.h \
EthernetDissector.c EthernetDissector.h \
PNRTDissector.c PNRTDissector.h \
PNRTADissector.c PNRTADissector.h

INCLUDES = @INCLUDES@
