## $Id
AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libprofinet_dissect.a

libprofinet_dissect_a_SOURCES = \
Dissector.c Dissector.h \
DissectorRegister.c DissectorRegister.h \
PacketDissector.c PacketDissector.h \
EthernetDissector.c EthernetDissector.h \
PNRTDissector.c PNRTDissector.h

INCLUDES = @INCLUDES@
